[metadata]
name = viddin
version = 2.0
author = Chris Osborn
author_email = fozztexx@fozztexx.com
description = Library and tools for processing, editing, ripping, and manipulating video
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/FozzTexx/viddin
license = GPL-3.0-or-later
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Operating System :: OS Independent

[options]
packages = find:
install_requires =
  Pillow
  librosa
  numpy
  opencv-python
  openvino
  python_magic
  pytimeparse
  requests-cache==0.5.2
  termcolor
  tesserocr
  tvdb_api==2.0
  xmltodict

scripts =
  add-skip-intro
  adjust-volume
  anaglyph
  autorip
  capture-vhs
  chapterize
  convert-ty
  convert2dv
  copy-tape
  dvdls
  dvdorder
  dvdtoiso
  edit-chapters
  find-audio
  find-black
  find-chapters
  find-cuts
  find-iframes
  find-intro
  find-silence
  find-text
  gifitize
  guess-chapters
  make-mpeg2
  renumber
  restore-ntsc
  rip-series
  rip-video
  splice
  split-near
  split-shorts
  split-times
  split-video
  subinfo
  trackinfo
  trim-shorts
  vidinf
